--- a/app/src/main/res/layout/minutnik_2.xml
+++ b/app/src/main/res/layout/minutnik_2.xml
@@ -47,29 +47,29 @@
             android:text="start"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/Startbutton"
+            android:id="@+id/StartButton"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/Stopbutton" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toStartOf="@+id/StopButton" android:layout_marginEnd="8dp"
             android:layout_marginRight="8dp" android:layout_marginBottom="8dp"
-            app:layout_constraintTop_toTopOf="@+id/Stopbutton"/>
+            app:layout_constraintTop_toTopOf="@+id/StopButton"/>
     <Button
             android:text="stop"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/Stopbutton"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginLeft="8dp"/>
+            android:layout_marginLeft="8dp" android:id="@+id/StopButton"/>
     <Button
             android:text="reset"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/Resetbutton"
+            android:id="@+id/ResetButton"
             android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/Stopbutton" android:layout_marginStart="8dp"
+            app:layout_constraintStart_toEndOf="@+id/StopButton" android:layout_marginStart="8dp"
             android:layout_marginLeft="8dp"
-            app:layout_constraintTop_toTopOf="@+id/Stopbutton"/>
+            app:layout_constraintTop_toTopOf="@+id/StopButton" app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
     <Button
             android:text="+"
             android:layout_width="27dp"
